# python-how-to-basic

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/web-app/: items_views.py  view.py
homework_03/web-app/users/: api.py  crud.py  dependencies.py  schemas.py
homework_04/: __init__.py  jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: docker-compose.yaml
