[tool.poetry]
name = "homework_03_fastapi_docker"
version = "0.1.0"
description = ""
authors = ["vadim <vadim.tyushkevich@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
